force-app/main/default/objects/Contract/fields/Auto_renewal_period__c.field-meta.xml
<CustomField>
    <fullName>Auto_renewal_period__c</fullName>
    <inlineHelpText>The auto renewal period if applicable</inlineHelpText>
    <label>Auto renewal period (months)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>