force-app/main/default/objects/Contract/fields/Contract_End_Date_Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date_Auto_Renewal__c</fullName>
    <formula>IF( (TODAY() &gt; Contract_Notice_Period_Deadline_Date__c) ,  ADDMONTHS(StartDate, VALUE(TEXT(ContractTerm)) + VALUE(TEXT(Auto_renewal_period__c))) -1,  ADDMONTHS(StartDate, VALUE(TEXT(ContractTerm))) -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract End Date Auto Renewal</label>
    <type>Date</type>
</CustomField>