force-app/main/default/objects/Contract/fields/Contract_Notice_Period_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Notice_Period_Deadline_Date__c</fullName>
    <formula>IF(
 (EndDate - VALUE(TEXT(Customer_notice_peroid__c)) &gt;= TODAY()),
 (EndDate - VALUE(TEXT(Customer_notice_peroid__c))) ,
 (ADDMONTHS(EndDate, VALUE(TEXT(Auto_renewal_period__c))) - VALUE(TEXT(Customer_notice_peroid__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date by which customers must have sent written notice to cancel to M12</inlineHelpText>
    <label>Contract Notice Period Deadline Date</label>
    <type>Date</type>
</CustomField>