force-app/main/default/objects/Contract/fields/Contract_Renewal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Stage__c</fullName>
    <label>Contract_Renewal_Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft Completed</fullName>
            </value>
            <value>
                <fullName>Draft Approved</fullName>
            </value>
            <value>
                <fullName>Customer Emailed</fullName>
            </value>
            <value>
                <fullName>Paid and Activated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>