force-app/main/default/objects/Contract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Giganet Ethernet</fullName>
            </value>
            <value>
                <fullName>Giganet Broadband</fullName>
            </value>
            <value>
                <fullName>Giganet Ethernet and Broadband</fullName>
            </value>
            <value>
                <fullName>Giganet MPLS</fullName>
            </value>
            <value>
                <fullName>Calls</fullName>
            </value>
            <value>
                <fullName>Line and calls bundle</fullName>
            </value>
            <value>
                <fullName>Line rental</fullName>
            </value>
            <value>
                <fullName>Managed Service</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>MPLS</fullName>
            </value>
            <value>
                <fullName>ShoreTel</fullName>
            </value>
            <value>
                <fullName>SpliceCom</fullName>
            </value>
            <value>
                <fullName>Giganet Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>