force-app/main/default/objects/Contract/fields/Contract_Value_One_Off__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value_One_Off__c</fullName>
    <inlineHelpText>The one off set up charge of the contract if applicable</inlineHelpText>
    <label>Install Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>