force-app/main/default/objects/Contract/fields/Contract_Value_Regular__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value_Regular__c</fullName>
    <inlineHelpText>The regular charge of the contract, e.g. the monthly charge.</inlineHelpText>
    <label>Monthly Contract Revenue</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>