force-app/main/default/objects/Contract/fields/Customer_notice_peroid__c.field-meta.xml
<CustomField>
    <fullName>Customer_notice_peroid__c</fullName>
    <inlineHelpText>cancellation notice period in days</inlineHelpText>
    <label>Notice period (days)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>