force-app/main/default/objects/Contract/fields/Giganet_Product__c.field-meta.xml
<CustomField>
    <fullName>Giganet_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Giganet Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Giganet_Product__c.Opportunity__c</field>
            <operation>equals</operation>
            <valueField>$Source.Opportunity__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Giganet_Product__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>