force-app/main/default/objects/Contract/fields/Maintenance_Calculated_At__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Calculated_At__c</fullName>
    <defaultValue>18</defaultValue>
    <label>Maintenance_Calculated_At</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>