force-app/main/default/objects/Contract/fields/Sales_Commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>Sales_Commission_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the sales commission being paid</inlineHelpText>
    <label>Sales Commission Paid</label>
    <type>Checkbox</type>
</CustomField>