force-app/main/default/objects/Contract/fields/Sales_Commission_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Commission_Paid_Date__c</fullName>
    <inlineHelpText>The date by which the sales commission will have been paid</inlineHelpText>
    <label>Sales Commission Paid Date</label>
    <type>Date</type>
</CustomField>