force-app/main/default/objects/Contract/fields/Technical_Contact__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Who is the technical contact</inlineHelpText>
    <label>Technical Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Technical Contact)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>