force-app/main/default/objects/Contract/fields/Uplift_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Percentage__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Uplift Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>