force-app/main/default/objects/Contract/recordTypes/Contract_Default.recordType-meta.xml
<RecordType>
    <fullName>Contract_Default</fullName>
    <active>true</active>
    <label>Contract Default</label>
</RecordType>