force-app/main/default/objects/Contract/recordTypes/Giganet_Contract.recordType-meta.xml
<RecordType>
    <fullName>Giganet_Contract</fullName>
    <active>true</active>
    <description>Giganet Contract</description>
    <label>Giganet Contract</label>
</RecordType>