force-app/main/default/objects/Contract/validationRules/Auto_renewal_period_set.validationRule-meta.xml
<ValidationRule>
    <fullName>Auto_renewal_period_set</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
Text(Status) = &quot;Activated&quot;, 
ISBLANK(  TEXT(Auto_renewal_period__c)  )
)</errorConditionFormula>
    <errorDisplayField>Auto_renewal_period__c</errorDisplayField>
    <errorMessage>Please ensure that the contract auto renewal period is set before activating the contract</errorMessage>
</ValidationRule>