force-app/main/default/objects/Contract/validationRules/Check_notice_period_set.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_notice_period_set</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
Text(Status) = &quot;Activated&quot;, 
ISBLANK( TEXT( Customer_notice_peroid__c ) )
)</errorConditionFormula>
    <errorDisplayField>Customer_notice_peroid__c</errorDisplayField>
    <errorMessage>Please ensure notice period is set before activating</errorMessage>
</ValidationRule>