force-app/main/default/objects/Contract/validationRules/Check_start_date_set_if_activated.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_start_date_set_if_activated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Text(Status) = &quot;Activated&quot;,
  ISBLANK( StartDate )
)</errorConditionFormula>
    <errorDisplayField>StartDate</errorDisplayField>
    <errorMessage>Please ensure that the contract start date is completed before activating the contract.</errorMessage>
</ValidationRule>