force-app/main/default/objects/Contract/listViews/Mel_s_active_contracts.listView-meta.xml
<ListView>
    <fullName>Mel_s_active_contracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>Opportunity__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Contract_Type__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Mel&apos;s contracts</label>
</ListView>